--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Het Circus</title>
+    <title>Het Circkus</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="title">
-        <h1>Welke clowns zijn in het Circus</h1>
+        <h1>Welke cklowns zijn in het Circkus</h1>
     </div>
 
     <div class="yur"></div>
